Wed Sep 23 23:09:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_test.mpb:
        * MPC/config/dcps_test_tcp.mpb:
        * tests/DCPS/TestFramework:
        * tests/DCPS/TestFramework/Test.idl:
        * tests/DCPS/TestFramework/TestFramework.h:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/TestFramework/TestFramework.mpc:
        * tests/DCPS/TestFramework/TestFramework_Export.h:

          Initial commit of DCPS TestFramework harness.

Wed Sep 23 21:36:29 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * LICENSE:

          Updated LICENSE verbiage.

Wed Sep 23 16:27:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * README:

          Updated documentation for next release.

Wed Sep 23 15:56:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * OpenDDS version 2.0 released.

Tue Sep 22 22:54:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:
        * bin/cross_tests.lst:

          Dropped default_ Messenger tests; these have not been verified
          to be correct.

Tue Sep 22 22:34:07 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          Fixes to MPC dependencies on Windows hosts.

Tue Sep 22 21:51:15 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Subscriber.cpp:
        * tests/DCPS/Messenger/DataReaderListener.cpp:

          DevGuideExamples updates; fixes for Windows CE builds.

Mon Sep 21 22:38:35 UTC 2009  Steven Stallion  <stallions@ociweb.com>
